--- a/about/index.html
+++ b/about/index.html
@@ -276,6 +276,111 @@
 
       
 
+      <section id="certificates" class="about-section certificates-section" style="max-width: 1200px; margin: 4rem auto; padding: 0 2rem;">
+
+        <h2 style="text-align: center; font-size: 2rem; margin-bottom: 3rem;" data-i18n="certificates">Chứng chỉ và thành tựu</h2>
+
+        <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 2rem;">
+
+          <div class="certificate-card" style="border-radius: 8px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: all 0.3s; background: linear-gradient(135deg, #f5f7fa 0%, #e4e9f0 100%); border: 2px solid #d1d5db; position: relative;" onmouseover="this.style.transform='translateY(-5px)'; this.style.borderColor='#6366f1'; this.style.boxShadow='0 8px 24px rgba(99,102,241,0.3)'" onmouseout="this.style.transform='translateY(0)'; this.style.borderColor='#d1d5db'; this.style.boxShadow='0 2px 8px rgba(0,0,0,0.1)'">
+
+            <a href="https://github.com/HyperOnlyTop/PinSwap" target="_blank" style="position: absolute; top: 0.8rem; right: 0.8rem; display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%); color: white; border-radius: 50%; text-decoration: none; box-shadow: 0 2px 8px rgba(107,114,128,0.3); transition: all 0.3s ease; z-index: 10;" onmouseover="this.style.transform='scale(1.1)'; this.style.boxShadow='0 4px 12px rgba(107,114,128,0.4)'" onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 2px 8px rgba(107,114,128,0.3)'">
+
+              <i class="fab fa-github" style="font-size: 1.1rem;"></i>
+
+            </a>
+
+            <div style="padding: 1.5rem;">
+
+              <div style="display: flex; align-items: center; justify-content: center; margin-bottom: 0.8rem;">
+
+                <div style="width: 50px; height: 50px; background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%); border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow: 0 2px 8px rgba(107,114,128,0.3);">
+
+                  <i class="fas fa-battery-three-quarters" style="color: white; font-size: 1.5rem;"></i>
+
+                </div>
+
+              </div>
+
+              <h3 data-i18n="project-title" style="margin: 0 0 0.3rem 0; font-size: 0.85rem; color: #6b7280; text-align: center; font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px;">Đồ án chuyên ngành</h3>
+
+              <h4 data-i18n="project-pinswap" style="margin: 0 0 0.8rem 0; font-size: 1.1rem; color: #1f2937; text-align: center; font-weight: 700; line-height: 1.3;">Pinswap - Website thu gom và phân loại pin phế thải</h4>
+
+              <div style="background: white; padding: 0.8rem; border-radius: 6px; margin-bottom: 0.8rem;">
+
+                <p id="desc-text-pinswap" data-i18n="project-pinswap-desc" style="margin: 0 0 0.4rem 0; color: #4b5563; font-size: 0.8rem; text-align: center; line-height: 1.5; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden;">
+                  Hiện nay, việc thu gom và phân loại pin phế thải còn hạn chế do thiếu thông tin và hệ thống quản lý tập trung. Vì vậy, nhóm thực hiện đề tài "PinSwap – Xây dựng website phân loại pin phế thải" nhằm hỗ trợ người dùng phân loại pin, tìm điểm thu gom và nâng cao ý thức bảo vệ môi trường.
+                </p>
+                <a href="#" id="toggle-btn-pinswap" onclick="event.preventDefault(); var desc = document.getElementById('desc-text-pinswap'); var btn = document.getElementById('toggle-btn-pinswap'); if(desc.style.webkitLineClamp === '2' || desc.style.display === '-webkit-box') { desc.style.display = 'block'; desc.style.webkitLineClamp = 'unset'; btn.textContent = 'Thu gọn'; } else { desc.style.display = '-webkit-box'; desc.style.webkitLineClamp = '2'; btn.textContent = 'Xem thêm'; }" style="color: #6b7280; font-size: 0.75rem; display: inline-block; text-decoration: none; font-weight: 600;">Xem thêm</a>
+
+              </div>
+
+              <p data-i18n="project-pinswap-date" style="margin: 0 0 0.8rem 0; color: #6b7280; font-size: 0.85rem; text-align: center;"><i class="fas fa-calendar-check" style="margin-right: 0.4rem;"></i>19/12/2025</p>
+
+              <div style="padding: 0.5rem; border-top: 1px solid #e5e7eb;">
+
+                <p data-i18n="project-pinswap-team" style="margin: 0; color: #6b7280; font-size: 0.75rem; text-align: center; line-height: 1.3;"><i class="fas fa-users" style="margin-right: 0.3rem; font-size: 0.7rem;"></i>Ngô Phạm Ngọc Tú, Võ Nguyên Bình, Nguyễn Thanh Trà</p>
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="certificate-card" style="cursor: pointer; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: all 0.3s; background: linear-gradient(135deg, #f5f7fa 0%, #e4e9f0 100%); border: 2px solid #d1d5db;" onclick="openImageModal('/images/cert-networking-basics.jpg')" onmouseover="this.style.transform='translateY(-5px)'; this.style.borderColor='#6366f1'; this.style.boxShadow='0 8px 24px rgba(99,102,241,0.3)'" onmouseout="this.style.transform='translateY(0)'; this.style.borderColor='#d1d5db'; this.style.boxShadow='0 2px 8px rgba(0,0,0,0.1)'">
+
+            <img src="/images/cert-networking-basics.jpg" alt="Networking Basics Certificate" style="width: 100%; height: auto; object-fit: contain;">
+
+            <div style="padding: 1.5rem; text-align: center;">
+
+              <h3 style="margin: 0 0 0.5rem 0; font-size: 1.2rem; color: #5b6fce;">Networking Basics</h3>
+
+              <p style="margin: 0.5rem 0; color: #666; font-size: 0.95rem;">Nguyễn Thanh Trà</p>
+
+              <p style="margin: 0.5rem 0; color: #999; font-size: 0.9rem;">Nov 2025</p>
+
+            </div>
+
+          </div>
+
+          <div class="certificate-card" style="cursor: pointer; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: all 0.3s; background: linear-gradient(135deg, #f5f7fa 0%, #e4e9f0 100%); border: 2px solid #d1d5db;" onclick="openImageModal('/images/cert-js-essentials-1.jpg')" onmouseover="this.style.transform='translateY(-5px)'; this.style.borderColor='#6366f1'; this.style.boxShadow='0 8px 24px rgba(99,102,241,0.3)'" onmouseout="this.style.transform='translateY(0)'; this.style.borderColor='#d1d5db'; this.style.boxShadow='0 2px 8px rgba(0,0,0,0.1)'">
+
+            <img src="/images/cert-js-essentials-1.jpg" alt="JavaScript Essentials 1 Certificate" style="width: 100%; height: auto; object-fit: contain;">
+
+            <div style="padding: 1.5rem; text-align: center;">
+
+              <h3 style="margin: 0 0 0.5rem 0; font-size: 1.2rem; color: #5b6fce;">JavaScript Essentials 1</h3>
+
+              <p style="margin: 0.5rem 0; color: #666; font-size: 0.95rem;">Nguyễn Thanh Trà</p>
+
+              <p style="margin: 0.5rem 0; color: #999; font-size: 0.9rem;">Dec 2025</p>
+
+            </div>
+
+          </div>
+
+          <div class="certificate-card" style="cursor: pointer; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: all 0.3s; background: linear-gradient(135deg, #f5f7fa 0%, #e4e9f0 100%); border: 2px solid #d1d5db;" onclick="openImageModal('/images/cert-js-essentials-2.jpg')" onmouseover="this.style.transform='translateY(-5px)'; this.style.borderColor='#6366f1'; this.style.boxShadow='0 8px 24px rgba(99,102,241,0.3)'" onmouseout="this.style.transform='translateY(0)'; this.style.borderColor='#d1d5db'; this.style.boxShadow='0 2px 8px rgba(0,0,0,0.1)'">
+
+            <img src="/images/cert-js-essentials-2.jpg" alt="JavaScript Essentials 2 Certificate" style="width: 100%; height: auto; object-fit: contain;">
+
+            <div style="padding: 1.5rem; text-align: center;">
+
+              <h3 style="margin: 0 0 0.5rem 0; font-size: 1.2rem; color: #5b6fce;">JavaScript Essentials 2</h3>
+
+              <p style="margin: 0.5rem 0; color: #666; font-size: 0.95rem;">Nguyễn Thanh Trà</p>
+
+              <p style="margin: 0.5rem 0; color: #999; font-size: 0.9rem;">Dec 2025</p>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </section>
+
+      
+
       <section class="about-section" style="max-width: 90%; margin: 2rem auto; padding: 0 2rem;">
 
         <h2 data-i18n="projects-portfolio" style="text-align: center; margin-bottom: 3rem; font-size: 2rem;">Dá»± Ã¡n & Portfolio</h2>
@@ -286,7 +391,7 @@
 
           <div style="position: relative; z-index: 1;">
 
-            <p data-i18n="blog-intro-text" style="color: #6b7280; font-size: 1.1rem; margin-bottom: 2rem; text-align: center;">CÃ¡c bÃ i viáº¿t trong blog lÃ  cÃ¡c kiáº¿n thá»©c mÃ  tÃ´i Ä‘Ã£ Ä‘Æ°á»£c há»c:</p>
+            <p data-i18n="blog-intro-text" style="color: #6b7280; font-size: 1.1rem; margin-bottom: 2rem; text-align: center;">Các bài viết trong blog là các kiến thức mà tôi đã được học:</p>
 
             <ul style="list-style: none; padding: 0; margin: 0; display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem;">
 
