--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,45 @@
 
       <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 2rem;">
 
-        <div class="certificate-card" style="cursor: pointer; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: transform 0.3s; background: white;" onclick="openImageModal('/images/cert-networking-basics.jpg')">
+        <div class="certificate-card" style="border-radius: 12px; overflow: hidden; box-shadow: 0 4px 16px rgba(0,0,0,0.12); transition: all 0.3s; background: linear-gradient(135deg, #f5f7fa 0%, #e4e9f0 100%); border: 2px solid #6b7280;" onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 24px rgba(107,114,128,0.2)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 16px rgba(0,0,0,0.12)'">
+
+          <div style="padding: 2rem;">
+
+            <div style="display: flex; align-items: center; justify-content: center; margin-bottom: 1rem;">
+
+              <div style="width: 60px; height: 60px; background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%); border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow: 0 4px 12px rgba(107,114,128,0.3);">
+
+                <i class="fas fa-battery-three-quarters" style="color: white; font-size: 1.8rem;"></i>
+
+              </div>
+
+            </div>
+
+            <h3 data-i18n="project-title" style="margin: 0 0 0.5rem 0; font-size: 1.1rem; color: #6b7280; text-align: center; font-weight: 600; text-transform: uppercase; letter-spacing: 0.5px;">Đồ án chuyên ngành</h3>
+
+            <h4 data-i18n="project-pinswap" style="margin: 0 0 1rem 0; font-size: 1.3rem; color: #1f2937; text-align: center; font-weight: 700; line-height: 1.4;">Pinswap - Website thu gom và phân loại pin phế thải</h4>
+
+            <div style="background: white; padding: 1rem; border-radius: 8px; margin-bottom: 1rem;">
+
+              <p data-i18n="project-pinswap-desc" style="margin: 0; color: #4b5563; font-size: 0.85rem; line-height: 1.6; text-align: justify;">Hiện nay, việc thu gom và phân loại pin phế thải của người dân còn hạn chế do thiếu thông tin hướng dẫn và hệ thống quản lý tập trung. Từ thực tế đó, nhóm chúng em thực hiện đề tài "PinSwap – Xây dựng website phân loại pin phế thải" nhằm cung cấp nền tảng trực tuyến hỗ trợ người dùng phân loại pin, tìm điểm thu gom phù hợp, góp phần bảo vệ môi trường và nâng cao ý thức cộng đồng.</p>
+
+            </div>
+
+            <p data-i18n="project-pinswap-date" style="margin: 0 0 1.5rem 0; color: #6b7280; font-size: 0.95rem; text-align: center;"><i class="fas fa-calendar-check" style="margin-right: 0.5rem;"></i>Ngày hoàn thành: 19/12/2025</p>
+
+            <a href="https://github.com/HyperOnlyTop/PinSwap" target="_blank" style="display: flex; align-items: center; justify-content: center; gap: 0.6rem; background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%); color: white; padding: 0.9rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; font-size: 0.95rem; box-shadow: 0 4px 12px rgba(107,114,128,0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 6px 20px rgba(107,114,128,0.4)'" onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 4px 12px rgba(107,114,128,0.3)'">
+
+              <i class="fab fa-github" style="font-size: 1.2rem;"></i>
+
+              Xem trên GitHub
+
+            </a>
+
+          </div>
+
+        </div>
+
+        <div class="certificate-card" style="cursor: pointer; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: all 0.3s; background: linear-gradient(135deg, #f5f7fa 0%, #e4e9f0 100%); border: 2px solid #d1d5db;" onclick="openImageModal('/images/cert-networking-basics.jpg')" onmouseover="this.style.transform='translateY(-5px)'; this.style.borderColor='#6b7280'; this.style.boxShadow='0 8px 24px rgba(107,114,128,0.2)'" onmouseout="this.style.transform='translateY(0)'; this.style.borderColor='#d1d5db'; this.style.boxShadow='0 2px 8px rgba(0,0,0,0.1)'">
 
           <img src="/images/cert-networking-basics.jpg" alt="Networking Basics Certificate" style="width: 100%; height: auto; object-fit: contain;">
 
@@ -156,7 +194,7 @@
 
         
 
-        <div class="certificate-card" style="cursor: pointer; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: transform 0.3s; background: white;" onclick="openImageModal('/images/cert-js-essentials-1.jpg')">
+        <div class="certificate-card" style="cursor: pointer; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: all 0.3s; background: linear-gradient(135deg, #f5f7fa 0%, #e4e9f0 100%); border: 2px solid #d1d5db;" onclick="openImageModal('/images/cert-js-essentials-1.jpg')" onmouseover="this.style.transform='translateY(-5px)'; this.style.borderColor='#6b7280'; this.style.boxShadow='0 8px 24px rgba(107,114,128,0.2)'" onmouseout="this.style.transform='translateY(0)'; this.style.borderColor='#d1d5db'; this.style.boxShadow='0 2px 8px rgba(0,0,0,0.1)'">
 
           <img src="/images/cert-js-essentials-1.jpg" alt="JavaScript Essentials 1 Certificate" style="width: 100%; height: auto; object-fit: contain;">
 
@@ -172,23 +210,17 @@
 
         </div>
 
-        
+      </div>
 
-        <div class="certificate-card" style="cursor: pointer; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1); transition: transform 0.3s; background: white;" onclick="openImageModal('/images/cert-js-essentials-2.jpg')">
+      <div style="text-align: right; margin-top: 3rem;">
 
-          <img src="/images/cert-js-essentials-2.jpg" alt="JavaScript Essentials 2 Certificate" style="width: 100%; height: auto; object-fit: contain;">
+        <a href="/about/#certificates" style="display: inline-flex; align-items: center; gap: 0.6rem; background: linear-gradient(135deg, #6b7280 0%, #4b5563 100%); color: white; padding: 0.7rem 1.5rem; border-radius: 8px; text-decoration: none; font-weight: 600; font-size: 0.95rem; box-shadow: 0 4px 12px rgba(107,114,128,0.3); transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 20px rgba(107,114,128,0.4)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(107,114,128,0.3)'">
 
-          <div style="padding: 1.5rem; text-align: center;">
+          Xem thêm
 
-            <h3 style="margin: 0 0 0.5rem 0; font-size: 1.2rem; color: #5b6fce;">JavaScript Essentials 2</h3>
+          <i class="fas fa-arrow-right" style="font-size: 0.9rem;"></i>
 
-            <p style="margin: 0.5rem 0; color: #666; font-size: 0.95rem;">Nguyễn Thanh Trà</p>
-
-            <p style="margin: 0.5rem 0; color: #999; font-size: 0.9rem;">Dec 2025</p>
-
-          </div>
-
-        </div>
+        </a>
 
       </div>
 
